2009-01-17  Johannes Schmid  <jhs@gnome.org>

	* plugins/file-manager/file-model.c (file_model_update_file),
	(on_row_expanded_async), (file_model_refresh):
	#568008 – invalid g_object_unref in file-manager
	(Carl-Anton Ingmarsson)
	
2009-01-17  Johannes Schmid  <jhs@gnome.org>

	* plugins/document-manager/anjuta-bookmarks.c
	(anjuta_bookmarks_add_file), (anjuta_bookmarks_session_save):
	Clear the bookmarks panel when the session is save to avoid adding too many
	bookmarks to the old session.
	
2009-01-17  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/language-support-cpp-java/cpp-java-assist.c
	(cpp_java_assist_show_calltip):
	#568020 – critical warning on bracket completion

2009-01-17  Jens Georg  <mail@jensge.org>

	reviewed by: Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/test/benchmark.c (get_files):
	#511589 – Anjuta uses GNOME-VFS

2009-01-17  James Liggett  <jrliggett@cox.net>

	* plugins/subversion/subversion-log-dialog.c (subversion_show_log),
	(on_log_view_button_clicked), (subversion_log_window_create),
	(on_fm_subversion_log):
	Make the View Log command in the Subversion plugin act immediately when 
	activated from the file manager context menu.
	
	Fixes Bug 565353 – View Log and Diff context menu commands should 
	act immediately

2009-01-16  James Liggett  <jrliggett@cox.net>

	* plugins/subversion/subversion-diff-dialog.c
	(subversion_show_diff), (on_subversion_diff_response),
	(on_fm_subversion_diff):
	When invoked from the file manager's context menu, the Subversion plugin's
	Diff command now works immediately, bypassing the dialog.
	
	Partially fixes Bug 565353 – View Log and Diff context menu commands should 
	act immediately

2009-01-16  Carl-Anton Ingmarsson <ca.ingmarsson@gmail.com>

	reviewed by: Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/plugin.c (find_file_line), (goto_file_tag):
	fixed #568028 – goto [declaration|implementation] should prefer the current 
	file.
