@@ -49,7 +49,6 @@ enum
 	COLUMN_FILENAME,
 	COLUMN_DISPLAY,
 	COLUMN_STATUS,
-	COLUMN_BACKGROUND,
 	COLUMN_FILE,
 	COLUMN_IS_DIR,
 	COLUMN_SORT,
